--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@fortawesome/fontawesome-free-webfonts": "^1.0.4",
     "@spinnaker/kayenta": "0.0.47",
     "@spinnaker/styleguide": "^1.0.0",
+    "@types/react-tether": "^0.5.3",
     "@uirouter/react-hybrid": "0.1.0",
     "@uirouter/rx": "0.4.5",
     "@uirouter/visualizer": "6.0.0",
@@ -72,6 +73,7 @@
     "react-redux": "^5.0.7",
     "react-select": "^1.2.1",
     "react-sortable-hoc": "^0.6.8",
+    "react-tether": "^0.6.1",
     "react-ultimate-pagination": "^1.2.0",
     "react-virtualized": "9.18.5",
     "react-virtualized-select": "^3.1.3",
