--- a/config/example.yaml
+++ b/config/example.yaml
@@ -3,5 +3,8 @@
 auth:
   enabled: true
   x509:
+    # See https://www.spinnaker.io/setup/security/authentication/ssl/ and
+    # https://www.spinnaker.io/setup/security/authentication/x509/ for guides on creating
+    # the key and cert files.
     certPath: "~/.spin/certpath"
-    keyPath: "~/.spin/keypath"
+    keyPath: "~/.spin/keypath" # This should point to an _unencrypted_ keyfile.
