feat(spinbot): enforce spinnaker/spin

--- a/spinbot/manifests/deploy.yml
+++ b/spinbot/manifests/deploy.yml
@@ -57,6 +57,7 @@ data:
       - spinnaker/orca
       - spinnaker/rosco
       - spinnaker/halyard
+      - spinnaker/spin
 
     logging:
       level: INFO
