feat(web): Support for proxying generic URLs through `gate` (#545)
This PR allows for selective proxying of requests through `gate`.

It is particularly useful when a UI component wants to communicate with
a service that does not offer up permissive CORS headers.

Still a few outstanding bits to implement:
- success/failure metrics
- method restriction (config supports it, implementation does not)

Example Config:

```
proxies:
  - id: spinnaker-readonly
    uri: http://spinnaker.com
    methods:
    - GET
    - POST
```

Example Usage:

```
curl localhost:7101/proxies/spinnaker-readonly/health

{
  "status": "UP"
}

Content-Type: application/vnd.spring-boot.actuator.v1+json;charset=UTF-8
X-Proxy-Status-Code: 200
X-Proxy-Url: http://spinnaker.com/health
```

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
   ext {
     springBootVersion = "1.5.7.RELEASE"
+    kotlinVersion = "1.2.41"
   }
   repositories {
     jcenter()
@@ -10,6 +11,7 @@ buildscript {
   dependencies {
     classpath 'com.netflix.spinnaker.gradle:spinnaker-gradle-project:4.0.0'
     classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
+    classpath "com.netflix.nebula:nebula-kotlin-plugin:${kotlinVersion}"
   }
 }
 
