--- a/gradle/kotlin.gradle
+++ b/gradle/kotlin.gradle
@@ -1,11 +1,11 @@
 /*
- * Copyright 2014 Netflix, Inc.
+ * Copyright 2018 Netflix, Inc.
  *
- * Licensed under the Apache License, Version 2.0 (the "License");
+ * Licensed under the Apache License, Version 2.0 (the "License")
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *    http://www.apache.org/licenses/LICENSE-2.0
+ *   http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -14,17 +14,21 @@
  * limitations under the License.
  */
 
-rootProject.name = "gate"
+apply plugin: "nebula.kotlin"
 
-include "gate-web", "gate-core", "gate-proxy"
-
-def setBuildFile(project) {
-  project.buildFileName = "${project.name}.gradle"
-  project.children.each {
-    setBuildFile(it)
+configurations.all {
+  resolutionStrategy {
+    eachDependency { details ->
+      if (details.requested.group == "org.jetbrains.kotlin") {
+        details.useVersion kotlinVersion
+      }
+    }
   }
 }
 
-rootProject.children.each {
-  setBuildFile(it)
+compileKotlin {
+  kotlinOptions {
+    languageVersion = "1.2"
+    jvmTarget = "1.8"
+  }
 }
