fix(metrics): replace Spring Boot metrics with Spectator (#267)
Also:
* pick up new spinnaker-dependencies for spectator 0.68.0 update
* update jacoco, which otherwise conflicts with spectator
* add explicit dependency on spectatorApi when we use it
* add exception tag on error metrics
* don't use a mock Registry when unnecessary
* make triggers.cronMisfires a timer (so that we can estimate trigger lag)
* adjust some log levels and messages
* add a pipelineConfigsPollingAgent.executionTimeMillis timer

--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ allprojects {
     group = "com.netflix.spinnaker.echo"
 
     ext {
-        spinnakerDependenciesVersion = project.hasProperty('spinnakerDependenciesVersion') ? project.property('spinnakerDependenciesVersion') : '0.156.0'
+        spinnakerDependenciesVersion = project.hasProperty('spinnakerDependenciesVersion') ? project.property('spinnakerDependenciesVersion') : '0.156.1'
     }
 
     def checkLocalVersions = [spinnakerDependenciesVersion: spinnakerDependenciesVersion]
@@ -78,7 +78,7 @@ allprojects {
 
 subprojects {
     jacoco {
-        toolVersion = '0.7.0.201403182114'
+        toolVersion = '0.8.1'
     }
 
     dependencies {
