refactor(provider/oracle, storage/oracle): oraclebmcs provider/storage is renamed to oracle

--- a/codelabs/gke-source-to-prod/install/manifests.yml
+++ b/codelabs/gke-source-to-prod/install/manifests.yml
@@ -173,7 +173,7 @@ data:
           accounts: []
           bakeryDefaults:
             baseImages: []
-        oraclebmcs:
+        oracle:
           enabled: false
           accounts: []
       deploymentEnvironment:
@@ -197,7 +197,7 @@ data:
           rootFolder: front50
         redis: {}
         s3: {}
-        oraclebmcs: {}
+        oracle: {}
       features:
         artifacts: true
         auth: false
