--- a/codelabs/base/install/manifests.yml
+++ b/codelabs/base/install/manifests.yml
@@ -174,7 +174,7 @@ data:
           accounts: []
           bakeryDefaults:
             baseImages: []
-        oraclebmcs:
+        oracle:
           enabled: false
           accounts: []
       deploymentEnvironment:
@@ -198,7 +198,7 @@ data:
           rootFolder: front50
         redis: {}
         s3: {}
-        oraclebmcs: {}
+        oracle: {}
       features:
         artifacts: true
         auth: false
