feat(provider/kubernetes): manifest labeler (#2695)

--- a/clouddriver-web/config/clouddriver.yml
+++ b/clouddriver-web/config/clouddriver.yml
@@ -263,6 +263,8 @@ openstack:
 
 kubernetes:
   enabled: false
+  v2:
+    applyAppLabels: false
 
 dockerRegistry:
   enabled: ${DOCKER_REGISTRY_ENABLED:false}
