--- a/gate-core/gate-core.gradle
+++ b/gate-core/gate-core.gradle
@@ -17,6 +17,7 @@
 dependencies {
   spinnaker.group("bootWeb")
   spinnaker.group('retrofitDefault')
+  spinnaker.group('test')
 
   compile spinnaker.dependency("korkSecurity")
   compile spinnaker.dependency('spectatorApi')
