--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free-webfonts": "^1.0.4",
+    "@spinnaker/amazon": "^0.0.104",
     "@types/plotly.js": "^1.28.12",
     "@uirouter/angularjs": "^1.0.15",
     "@uirouter/react-hybrid": "^0.1.0",
@@ -55,6 +56,7 @@
     "react-redux": "^5.0.7",
     "react-select": "^1.2.1",
     "react-sortable-hoc": "^0.6.8",
+    "react-tether": "^0.6.1",
     "react-ultimate-pagination": "^1.2.0",
     "react-virtualized-select": "3.1.3",
     "redux": "^3.7.2",
