--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,12 @@ allprojects {
       }
     }
 
+    tasks.withType(JavaExec) {
+      if (System.getProperty('DEBUG', 'false') == 'true') {
+        jvmArgs '-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=8188'
+      }
+    }
+
     group = "com.netflix.spinnaker.igor"
 }
 
