feat(influxdb): added integration to influxdb as a metric source (#324)
* feat(influxdb): added integration to influxdb as a metric source

* feat(influxdb): incoporated review comments

influxdb-integration

* feat(influxdb): fixed copyrights + extra newlines + sored order of influxdb references

influxdb-integration

--- a/kayenta-web/kayenta-web.gradle
+++ b/kayenta-web/kayenta-web.gradle
@@ -22,6 +22,7 @@ dependencies {
   compile project(':kayenta-datadog')
   compile project(':kayenta-gcs')
   compile project(':kayenta-google')
+  compile project(':kayenta-influxdb')
   compile project(':kayenta-judge')
   compile project(':kayenta-objectstore-configbin')
   compile project(':kayenta-objectstore-memory')
