--- a/settings.gradle
+++ b/settings.gradle
@@ -22,6 +22,7 @@ include 'kayenta-core'
 include 'kayenta-datadog'
 include 'kayenta-gcs'
 include 'kayenta-google'
+include 'kayenta-influxdb'
 include 'kayenta-judge'
 include 'kayenta-mannwhitney'
 include 'kayenta-objectstore-configbin'
