chore(build): Add debug flag to gate build (#567)
Starting gate with ./gradlew -DDEBUG=true now causes the JVM to
listen on port 8184 for a remote debugger.

--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,12 @@ allprojects {
     exclude group: 'javax.servlet', module: 'javax.servlet-api'
   }
 
+  tasks.withType(JavaExec) {
+    if (System.getProperty('DEBUG', 'false') == 'true') {
+      jvmArgs '-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=8184'
+    }
+  }
+
   group = "com.netflix.spinnaker.gate"
 
   test {
