--- a/dev/all_tests.yaml
+++ b/dev/all_tests.yaml
@@ -170,6 +170,16 @@ tests:
       spinnaker_kubernetes_v2_account: $k8s_v2_account_name
       test_namespace: $k8s_v2_account_namespaces
 
+  kube_v2_cache_test:
+    requires:
+      configuration:
+        k8s_v2_account_enabled: true
+      services: [clouddriver, front50, gate, orca]
+    api: gate
+    args:
+      spinnaker_kubernetes_v2_account: $k8s_v2_account_name
+      test_namespace: $k8s_v2_account_namespaces
+
   kube_v2_gcs_test:
     requires:
       configuration:
