--- a/package.json
+++ b/package.json
@@ -142,7 +142,7 @@
     "imports-loader": "^0.8.0",
     "istanbul-instrumenter-loader": "^3.0.0",
     "jasmine-core": "2.99.1",
-    "karma": "=2.0.0",
+    "karma": "2.0.4",
     "karma-chrome-launcher": "=2.2.0",
     "karma-jasmine": "=1.1.1",
     "karma-junit-reporter": "^1.1.0",
