chore(buildtool): Update base config/template with spin build.

--- a/dev/buildtool/config-template.yml
+++ b/dev/buildtool/config-template.yml
@@ -177,6 +177,12 @@
 # halyard_version
 # docs_repo_owner:
 
+################################
+# Spin CLI Commands
+################################
+# spin_build_bucket:
+# spin_build_credentials_path:
+
 
 ################################
 # Image Commands
