--- a/dev/buildtool/ga-defaults.yml
+++ b/dev/buildtool/ga-defaults.yml
@@ -33,8 +33,14 @@ halyard_bom_bucket: halconfig
 
 
 ################################
+# Spin CLI Commands
+################################
+spin_build_bucket: spinnaker-artifacts
+spin_build_credentials_path:
+
+
+################################
 # Container Commands
 ################################
 docker_registry: gcr.io/spinnaker-marketplace
 gcb_project: spinnaker-marketplace
-
