test(provider/kubernetes): make helm namepace customizable

--- a/testing/citest/tests/kube_v2_data/helm-test/templates/deployment.yaml
+++ b/testing/citest/tests/kube_v2_data/helm-test/templates/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1beta2
 kind: Deployment
 metadata:
   name: "{{ .Values.name }}"
+  namespace: "{{ .Values.namespace }}"
   labels:
     app: {{ template "helm_test.name" . }}
     chart: {{ template "helm_test.chart" . }}
