feat(spinbot): more detailed pull stats
So far we only captured pull request stats on merge, now we capture them
for all open pull requests as well

--- a/spinbot/manifests/deploy.yml
+++ b/spinbot/manifests/deploy.yml
@@ -4,7 +4,7 @@ metadata:
   name: spinbot
   namespace: spinbot
 spec:
-  schedule: "*/2 * * * *"
+  schedule: "*/4 * * * *"
   jobTemplate:
     spec:
       template:
@@ -73,6 +73,7 @@ data:
     policy:
       policies:
       - name: log_issue_policy
+      - name: log_pull_request_policy
       - name: log_repository_policy
 
     event:
