--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
     "@spinnaker/kayenta": "0.0.54",
     "@spinnaker/styleguide": "^1.0.0",
     "@types/react-tether": "^0.5.3",
-    "@uirouter/react-hybrid": "0.1.0",
+    "@uirouter/react-hybrid": "0.3.2",
     "@uirouter/rx": "0.4.5",
-    "@uirouter/visualizer": "6.0.0",
+    "@uirouter/visualizer": "6.0.2",
     "Select2": "git://github.com/select2/select2.git#3.4.8",
     "angular": "~1.6.3",
     "angular-cron-gen": "0.0.21",
@@ -180,5 +180,12 @@
   },
   "optionalDependencies": {
     "fsevents": "^1.1.3"
+  },
+  "resolutionsPurpose": "This temporarily chooses the right versions of these libs, which are specified in both deck AND deck-kayenta",
+  "resolutions": {
+    "@uirouter/react-hybrid": "0.3.2",
+    "@uirouter/react": "0.8.4",
+    "@uirouter/angularjs": "1.0.19",
+    "@uirouter/core": "5.0.20"
   }
 }
