--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
 org.gradle.parallel=true
+kapt.use.worker.api=true
 
 bootVersion=1.5.14.RELEASE
 grpcVersion=1.13.2
@@ -8,7 +9,7 @@ junitVersion=1.2.0
 jupiterVersion=5.2.0
 keikoVersion=2.9.0
 korkVersion=2.0.0
-kotlinVersion=1.2.51
+kotlinVersion=1.2.60
 logbackVersion=5.1
 mockitoVersion=1.6.0
 monikerVersion=0.2.0
@@ -18,5 +19,6 @@ protocVersion=3.6.0
 retrofitVersion=1.9.0
 slf4jVersion=1.7.25
 spek2Version=2.0.0-alpha.1
-spekVersion=1.1.5
+spekVersion=1.2.0
+spinnakerVersion=4.1.2
 striktVersion=0.9.0
