--- a/keel-rule-engine/keel-rule-engine.gradle
+++ b/keel-rule-engine/keel-rule-engine.gradle
@@ -1,15 +1,14 @@
 apply plugin: "java-library"
-apply plugin: "kotlin-spring"
 apply from: "$rootDir/gradle/grpc.gradle"
 apply from: "$rootDir/gradle/spek2.gradle"
-apply from: "$rootDir/gradle/junit5.gradle"
 
 dependencies {
-  implementation project(":keel-api")
-  implementation project(":keel-clouddriver")
-  implementation project(":keel-orca")
+  protobuf project(":keel-api")
+
   implementation "com.netflix.spinnaker.kork:kork-core:$korkVersion"
 
   testImplementation "io.strikt:strikt-protobuf:$striktVersion"
   testImplementation project(":keel-api-test")
+  testImplementation "io.grpc:grpc-netty:$grpcVersion"
 }
+
