fix(spinbot): unchecked-in code, & abuse protection mechanism

--- a/spinbot/manifests/deploy.yml
+++ b/spinbot/manifests/deploy.yml
@@ -75,6 +75,7 @@ data:
       - name: log_issue_policy
       - name: log_pull_request_policy
       - name: log_repository_policy
+      - name: stale_issue_policy
 
     event:
       handlers:
