--- a/dev/all_tests.yaml
+++ b/dev/all_tests.yaml
@@ -40,7 +40,7 @@ tests:
       alias: [standard_google_provider_params]
       test_google:
       jenkins_token: TRIGGER_TOKEN
-      jenkins_job: NoOpTrigger
+      jenkins_job: $test_jenkins_job_name
       jenkins_url: $jenkins_master_address
       jenkins_master: $jenkins_master_name
       jenkins_master_user: $jenkins_master_user
