feat(spinbot): close PRs with unedited messages

--- a/spinbot/manifests/deploy.yml
+++ b/spinbot/manifests/deploy.yml
@@ -83,6 +83,7 @@ data:
       - name: log_event_handler
         config:
           payload: false
+      - name: pull_request_message_handler
       - name: filetype_check_pull_request_handler
         config:
           omit_repos: 
