fix(swagger): Include pipeline-config-controller in Swagger (#586)

--- a/gate-web/config/gate.yml
+++ b/gate-web/config/gate.yml
@@ -63,6 +63,7 @@ swagger:
     - .*applications.*
     - .*securityGroups.*
     - /search
+    - .*pipelineConfigs.*
     - .*pipelines.*
     - .*loadBalancers.*
     - .*instances.*
