fix(swagger): Include pipeline templates in Swagger (#585)
".*pipelines.*" doesn't match "pipelineTemplates", so the pipeline
templates API calls were not included in Swagger.

Remove the "s" in ".*pipelines.*" to fix this.

--- a/gate-web/config/gate.yml
+++ b/gate-web/config/gate.yml
@@ -63,6 +63,7 @@ swagger:
     - .*applications.*
     - .*securityGroups.*
     - /search
+    - .*pipeline.*
     - .*pipelineConfigs.*
     - .*pipelines.*
     - .*loadBalancers.*
