--- a/gate-core/gate-core.gradle
+++ b/gate-core/gate-core.gradle
@@ -19,6 +19,7 @@ dependencies {
   spinnaker.group('retrofitDefault')
   spinnaker.group('test')
 
+  compile spinnaker.dependency("kork")
   compile spinnaker.dependency("korkSecurity")
   compile spinnaker.dependency('spectatorApi')
   compile spinnaker.dependency("groovy")
