--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,15 @@ before_install:
 - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.5.1
 - sh -e /etc/init.d/xvfb start
 install: gradle/installViaTravis.sh
-script:
-  - gradle/buildViaTravis.sh
-  - gradle/buildModules.sh
+
+jobs:
+  include:
+    - stage: tests
+      name: run tests for deck
+      script: gradle/buildViaTravis.sh
+    - name: build the all module libs
+      script: gradle/buildModules.sh
+
 before_cache: gradle/prepCaches.sh
 cache:
   directories:
