--- a/package.json
+++ b/package.json
@@ -146,9 +146,9 @@
     "istanbul-instrumenter-loader": "^2.0.0",
     "jasmine": "^3.1.0",
     "jasmine-core": "3.1.0",
-    "jquery": "2.1.4",
+    "jquery": "3.3.1",
     "jquery-textcomplete": "1.6.1",
-    "jquery-ui": "~1.10.5",
+    "jquery-ui": "1.12.0",
     "js-worker-search": "^1.2.1",
     "json-loader": "^0.5.4",
     "karma": "^2.0.0",
