feat: show full metric descriptor for stackdriver (#367)

--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "@types/d3": "^5.0.0",
     "@types/dompurify": "^0.0.31",
     "@types/enzyme": "^3.1.9",
+    "@types/enzyme-redux": "^0.2.1",
     "@types/jasmine": "2.5.47",
     "@types/jquery": "^2.0.34",
     "@types/js-yaml": "3.5.30",
@@ -105,6 +106,7 @@
     "@types/react-select": "^1.2.4",
     "@types/redux-actions": "^2.2.0",
     "@types/redux-logger": "^3.0.3",
+    "@types/redux-test-utils": "^0.2.0",
     "@types/webpack": "^2.2.4",
     "@types/webpack-env": "^1.13.0",
     "@uirouter/rx": "0.4.5",
@@ -132,6 +134,7 @@
     "envify-loader": "^0.1.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-redux": "^0.2.1",
     "eslint": "^3.17.0",
     "eslint-loader": "^1.6.3",
     "exports-loader": "^0.6.3",
@@ -172,6 +175,7 @@
     "prop-types": "^15.6.1",
     "react-test-renderer": "16.3.2",
     "react2angular": "^3.2.1",
+    "redux-test-utils": "^0.3.0",
     "rimraf": "^2.5.4",
     "style-loader": "^0.17.0",
     "ts-loader": "^3.5.0",
