--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "start": "sh ./start.sh",
     "start-dev-server": "webpack-dev-server --inline --hot",
     "test": "karma start",
+    "test-coverage": "karma start --coverage",
     "tslint": "tslint --type-check --project tsconfig.json",
     "prepublishOnly": "npm run lib",
     "lib": "rimraf lib && node ./node_modules/webpack/bin/webpack.js --config ./build_scripts/webpack.build.js",
@@ -147,7 +148,7 @@
     "html-webpack-plugin": "^2.28.0",
     "husky": "^1.1.0",
     "imports-loader": "^0.7.0",
-    "istanbul-instrumenter-loader": "^2.0.0",
+    "istanbul-instrumenter-loader": "^3.0.1",
     "jasmine": "^3.1.0",
     "jasmine-core": "3.1.0",
     "jquery": "3.3.1",
@@ -157,9 +158,11 @@
     "json-loader": "^0.5.4",
     "karma": "^2.0.0",
     "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage": "^1.1.2",
     "karma-jasmine": "^1.1.1",
     "karma-junit-reporter": "^1.1.0",
     "karma-mocha-reporter": "^2.2.5",
+    "karma-remap-coverage": "^0.1.5",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.13",
     "less": "^2.7.2",
@@ -177,6 +180,7 @@
     "react2angular": "^3.2.1",
     "redux-test-utils": "^0.3.0",
     "rimraf": "^2.5.4",
+    "source-map-loader": "^0.2.4",
     "style-loader": "^0.17.0",
     "ts-loader": "^3.5.0",
     "tslint": "^5.10.0",
