--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,5 +34,7 @@
     "useCache": true
   },
   "exclude": ["build", "node", "node_modules", "transpiled"],
-  "include": ["test/helpers/custom-matchers.d.ts", "src/**/*.ts", "src/**/*.tsx"]
+  "include": ["test/helpers/custom-matchers.d.ts", "src/**/*.ts", "src/**/*.tsx"],
+  "inlineSourceMap": true,
+  "sourceMap": false
 }
