--- a/gate-web/gate-web.gradle
+++ b/gate-web/gate-web.gradle
@@ -26,6 +26,7 @@ dependencies {
   spinnaker.group('retrofitDefault')
   spinnaker.group("test")
   spinnaker.group("fiat")
+
   compile spinnaker.dependency("kork")
   compile spinnaker.dependency("korkStackdriver")
   compile spinnaker.dependency("korkSwagger")
@@ -48,6 +49,7 @@ dependencies {
 
   //this brings in the jetty GzipFilter which boot will autoconfigure
   runtime 'org.eclipse.jetty:jetty-servlets:9.2.11.v20150529'
+  runtime project(":gate-auth-iap")
 }
 
 configurations.all {
