--- a/settings.gradle
+++ b/settings.gradle
@@ -16,7 +16,11 @@
 
 rootProject.name = "gate"
 
-include "gate-web", "gate-core", "gate-proxy", "gate-security"
+include "gate-web",
+  "gate-core",
+  "gate-proxy",
+  "gate-security",
+  "gate-auth-iap"
 
 def setBuildFile(project) {
   project.buildFileName = "${project.name}.gradle"
