refactor(auth): Split auth providers into their own modules (#653)
* refactor(auth/iap): Extract IAP to its own module

* refactor(auth/ldap): Extract LDAP to its own module

* refactor(auth/oauth2): Migrate OAuth2 to its own module

* refactor(auth/saml): Extract SAML to its own module

* refactor(auth/x509): Extract X509 to its own module

* chore(deps): Clean up dependencies

* refactor(auth): Move core security classes into `gate-core`

* refactor(auth): Remove "auth" prefix from module names

--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,11 @@ allprojects {
     dependenciesVersion = spinnakerDependenciesVersion
   }
 
+  dependencies {
+    compileOnly spinnaker.dependency("lombok")
+    spinnaker.group('test')
+  }
+
   configurations.all {
     exclude group: 'javax.servlet', module: 'servlet-api'
     exclude group: 'javax.servlet', module: 'javax.servlet-api'
