--- a/gate-web/gate-web.gradle
+++ b/gate-web/gate-web.gradle
@@ -49,11 +49,11 @@ dependencies {
 
   //this brings in the jetty GzipFilter which boot will autoconfigure
   runtime 'org.eclipse.jetty:jetty-servlets:9.2.11.v20150529'
-  runtime project(":gate-iap")
-  runtime project(":gate-ldap")
-  runtime project(":gate-oauth2")
-  runtime project(":gate-saml")
-  runtime project(":gate-x509")
+
+  // Add each included authz provider as a runtime dependency
+  gradle.includedProviderProjects.each {
+    runtime project(it)
+  }
 }
 
 configurations.all {
