--- a/settings.gradle
+++ b/settings.gradle
@@ -35,3 +35,5 @@ def setBuildFile(project) {
 rootProject.children.each {
   setBuildFile(it)
 }
+
+gradle.ext.includedProviderProjects = includeProviders.split(',').collect{ ':gate-' + it.toLowerCase() }
