feat(newrelic): implemention for newrelic insights as a metrics store (#412)
feat(newrelic): Implemention for newrelic insights as a metrics store.

--- a/kayenta-web/config/kayenta.yml
+++ b/kayenta-web/config/kayenta.yml
@@ -50,6 +50,15 @@ kayenta:
 #          - METRICS_STORE
 #        endpoint.baseUrl: https://app.datadoghq.com
 
+  newrelic:
+    enabled: false
+#    accounts:
+#    - name: my-newrelic-account
+#      apiKey: xxxx
+#      applicationKey: xxxx
+#      supportedTypes:
+#      - METRICS_STORE
+
   prometheus:
     enabled: false
 #    accounts:
