fix(jenkins): replace SimpleXML with Jackson for XML deserialization (#333)
* fix(jenkins): replace SimpleXML with Jackson for XML deserialization

I am now suspecting that SimpleXMLConverter is responsible for the leaked
connections. I haven't witnessed any leaked connections anymore after
switching to Jackson.

Switch from SimpleXML to mostly JAXB annotations, with a few Jackson
annotations when it seemed necessary (for unwrapped collections).

This is one step closer to moving off of SimpleXML (deprecated in retrofit2)
and should make it easier to switch serializations implementations in the
future.

It seems we can get undeterministic ordering of sibling which should not
be a big deal but breaks some unit tests that depend on an exact string
output, so only check the semantic values of the response, not the ordering of the
elements

--- a/igor-web/igor-web.gradle
+++ b/igor-web/igor-web.gradle
@@ -33,6 +33,7 @@ dependencies {
 
     compile 'org.yaml:snakeyaml:1.15'
     compile 'com.squareup.retrofit:converter-simplexml:1.9.0'
+    compile 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.9.6'
     compile 'com.google.code.gson:gson:2.8.2'
     testCompile 'com.squareup.okhttp:mockwebserver:2.7.0'
 
