--- a/keel-api/keel-api.gradle
+++ b/keel-api/keel-api.gradle
@@ -5,15 +5,16 @@ apply plugin: "application"
 
 dependencies {
   api project(":keel-core")
+  api project(":keel-plugin")
   implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:+"
   implementation "com.netflix.spinnaker.kork:kork-core:2.+"
 //  implementation "com.netflix.spinnaker.keiko:keiko-redis-spring:+"
-  implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:+"
-  implementation "com.fasterxml.jackson.module:jackson-module-kotlin:+"
-  implementation "org.springframework.boot:spring-boot-starter-actuator:$bootVersion"
-  implementation "org.springframework.boot:spring-boot-starter-web:$bootVersion"
+  implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml"
+  implementation "com.fasterxml.jackson.module:jackson-module-kotlin"
+  implementation "org.springframework.boot:spring-boot-starter-actuator"
+  implementation "org.springframework.boot:spring-boot-starter-web"
 
-  testImplementation "io.strikt:strikt-protobuf:+"
+  testImplementation "io.strikt:strikt-core:+"
   testImplementation project(":keel-spring-test-support")
   testImplementation project(":keel-api-tck")
   testImplementation(project(":keel-ec2")) {
