fix(Azure OAuth): Map username for Azure OAuth provider (#676)

--- a/gate-web/config/gate.yml
+++ b/gate-web/config/gate.yml
@@ -142,6 +142,7 @@ security:
     resource:
       userInfoUri: https://graph.windows.net/me?api-version=1.6
     userInfoMapping:
+      username: userPrincipalName
       email: userPrincipalName
       firstName: givenName
       lastName: surname
