feat(standalone-canary-analysis): Add Standalone Canary Analysis Module. (#445)
* feat(standalone-canary-analysis): Ported logic from Orca into a new module to enable canary analysis executions with multiple judgements over some lifetime with a growing/sliding time window via the REST API.

* refactor(kayenta-core): revert springfox-swagger deps update as it breaks kayenta-core unit tests

* refactor(kayenta-core): re-update springfox-swagger deps but force a version of bytebuddy so spock doesn't break

* refactor(standalone-canary-analysis): cleanup whitespacing, refactor name of module and controller, cleanup unused dependency, and remove uneeded log statement

* refactor(events): made the pipeline execution complete event handler generic so that multiple pipelines can trigger complete events

* refactor(standalone-canary-analysis): default user and application in the controller and take care of misc remaining PR feedback

--- a/kayenta-signalfx/src/integration-test/resources/config/kayenta.yml
+++ b/kayenta-signalfx/src/integration-test/resources/config/kayenta.yml
@@ -50,6 +50,8 @@ kayenta:
   configbin:
     enabled: false
 
+  standaloneCanaryAnalysis.enabled: true
+
 management.security.enabled: false
 
 keiko:
@@ -81,3 +83,4 @@ swagger:
   - /metricSetList.*
   - /metricSetPairList.*
   - /pipeline.*
+  - /standalone.*
