--- a/settings.gradle
+++ b/settings.gradle
@@ -33,6 +33,7 @@ include 'kayenta-prometheus'
 include 'kayenta-s3'
 include 'kayenta-signalfx'
 include 'kayenta-stackdriver'
+include 'kayenta-standalone-canary-analysis'
 include 'kayenta-web'
 
 def setBuildFile(project) {
