feat(graphite): add graphite metrics configurator (#399)
* feat(graphite): add graphite metrics configuration (#3)

* fix(graphite): store the input if not matches here

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "plotly.js": "^1.35.2",
     "react": "16.3.2",
     "react-bootstrap": "^0.32.1",
+    "react-bootstrap-typeahead": "^3.2.4",
     "react-dom": "16.3.2",
     "react-ga": "^2.4.1",
     "react-redux": "^5.0.7",
@@ -102,6 +103,7 @@
     "@types/prop-types": "^15.5.2",
     "@types/react": "^16.3.14",
     "@types/react-bootstrap": "^0.32.6",
+    "@types/react-bootstrap-typeahead": "^3.2.1",
     "@types/react-dom": "^16.0.5",
     "@types/react-redux": "^5.0.15",
     "@types/react-select": "^1.2.4",
