fix(authn/basic): Enable basic auth in gate (#675)
* fix(authn/basic): Enable basic auth

* fix(authn/basic): Removed multiauth support from basic authn

* fix(authn/basic): Arranged module names in alphabetical order

* fix(authn/basic): Spinnaker User principal object instead of a string

* fix(authn/basic): Added tests for basic auth

* fix(authn/basic): Refactor from groovy to java

* fix(authn/basic): Renamed property for enabling basic auth

* fix(authn/basic): Fixed and added tests for security.basic combinations

--- a/gate-web/gate-web.gradle
+++ b/gate-web/gate-web.gradle
@@ -43,6 +43,7 @@ dependencies {
   compileOnly spinnaker.dependency("lombok")
 
   testCompile project(":gate-ldap") // TODO: Move system tests to own module
+  testCompile project(":gate-basic")
   testCompile "com.squareup.okhttp:mockwebserver:${spinnaker.version('okHttp')}"
   testCompile apachedsDependencies
   testCompile spinnaker.dependency("korkJedisTest")
