feat(kork/secrets): Adding SecretManager (#219)
* feat(kork/secrets): Adding SecretManager

* Trigger re-build

* returning Path object for decryptFile method

* consistent style in kork-secrets.gradle

--- a/kork-secrets/kork-secrets.gradle
+++ b/kork-secrets/kork-secrets.gradle
@@ -11,4 +11,10 @@ dependencies {
   testCompile spinnaker.dependency('groovy')
   spinnaker.group('spockBase')
   testRuntime spinnaker.dependency('slf4jSimple')
+
+  testCompile(group: 'org.springframework', name: 'spring-test', version: '4.3.20.RELEASE')
+  testCompile(group: 'org.springframework.boot', name: 'spring-boot-test', version: '1.5.14.RELEASE')
+  testCompile(group: 'org.mockito', name: 'mockito-core', version: '2.23.4')
+
+
 }
